# yadro-test-task-1

./: CMakeLists.txt  README.md  improvements.md  main.cpp
include/: bot.h  dungeon.h  gameworld.h  logger.h  person.h  resources.h  resourses.h  room.h
src/: bot.cpp  dungeon.cpp  gameworld.cpp  logger.cpp  main.cpp  person.cpp  room.cpp
tests/: in1_success.txt  in2_error.txt  in3.txt  test_alise_bot_class.cpp  test_dungeon_class.cpp  test_resources_class.cpp
